<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Posts_Layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/postImage"
        android:layout_width="282dp"
        android:layout_height="256dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postText"
        app:srcCompat="@drawable/golden" />

    <ImageView
        android:id="@+id/communityImage"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dog" />

    <TextView
        android:id="@+id/comunnityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community_title"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/communityImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/postTitle"
        android:layout_width="332dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/post_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/postImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/communityImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/postText"
        android:layout_width="332dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:text="@string/post_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/postImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postTitle"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/optionsButton"
        android:layout_width="61dp"
        android:layout_height="34dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093"
        app:srcCompat="@drawable/dot" />

    <ImageButton
        android:id="@+id/upvote"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/uparrow"
        android:contentDescription="@string/upvote" />

    <ImageButton
        android:id="@+id/downvote"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/arrowdown"
        android:contentDescription="@string/downvote" />

    <ImageButton
        android:id="@+id/comments"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="start|end"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/comments"
        android:contentDescription="@string/comments" />

    <ImageButton
        android:id="@+id/medal"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/medalla"
        android:contentDescription="@string/medal" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postImage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/compartir"
        android:contentDescription="@string/share" />

</androidx.constraintlayout.widget.ConstraintLayout>